# Snake

./: CMakeLists.txt  Makefile  README.md
examples/: density.grid  plane.par  plane1.par  snake_output.py  test.par
libs/: Makefile  create_opacity_table.py  opal_script.f  snake_output.py
src/: 2d_interp.c  2d_interp.h  convergence.c  default_pars.c  density_init.c  eddington.c  error.h  flib.h  functions.h  geo_init.c  grid_init.c  grid_set.c  gsl_interp.c  gsl_interp.h  init_density.c  init_geo.c  init_grid.c  init_snake.c  main.c  opacities.c  opacities.h  opal.f  opal_interp.f  output.c  read_pars.c  setup.c  snake.h  snake_functions.h  snake_init.c  time.c  update_opac.c  utility.c
src/eddington/: eddington.c  update_opac.c
src/flib/: opal.f
src/init/: density_init.c  geo_init.c  grid_init.c  snake_init.c
src/interp/: 2d_interp.c  2d_interp.h
src/opac/: interp.c  opac.c  opac.h
src/util/: convergence.c  default_pars.c  output.c  read_pars.c  time.c  utility.c
